Fixed navbar not being usable on small devices due to weird z-indexing on spacing div.

--- a/assets/main.css
+++ b/assets/main.css
@@ -690,6 +690,10 @@ a.sky:active {
   z-index: 50;
 }
 
+.-z-10 {
+  z-index: -10;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
